# AiPlatform

./: Dockerfile  README.md  docker-compose.yml  dump_promt.py  model_classication.py  model_regression.py  models_architecture.py  pyproject.toml  requirements.txt  settings.py
ai_model/: ai_typing.py  ensemble_model.pkl  knn_mahalanobis.py  model_classication.py  model_mixin.py  model_regression.py  models_architecture.py  recommender.py  reg_utils.py
ai_model/saving_model/classification/: decision_tree_classification_model.pkl  knn_classification_model.pkl  logistic_regression_classification_model.pkl  voting_classification_model.pkl
ai_model/saving_model/regression/: decision_tree_regression_model.pkl  knn_regression_model.pkl  linear_regression_regression_model.pkl  stacking_regression_model.pkl
app/: main.py
app/api/v1/endpoints/: todo.py
app/core/: config.py
app/crud/: todo.py
app/db/: session.py
app/models/: todo.py
app/schemas/: todo.py
