[tool.poetry]
name = "aiplatform"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
keras = "^3.4.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
tensorflow = "2.16.1"
tf-keras = ">=2.16,<3.0"
keras-tuner = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
