[tool.poetry]
name = "aiplatform"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
keras = "^3.4.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
tensorflow = "2.16.1"
tf-keras = ">=2.16,<3.0"
keras-tuner = "^1.4.7"
openai = "^1.37.0"
scikit-learn = "^1.5.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
aiomysql = "^0.2.0"
databases = "^0.9.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
